# acrobat

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  ros_entrypoint.sh
.github/workflows/: build_and_test.yml  cd.yml  ci.yml  deploy_arm64.yml  deploy_x86_64.yml  hello_world.yml
acrobat/: CMakeLists.txt  package.xml
acrobat/launch/: acrobat.launch.py  acrobat_workstation.launch.py  dataset.launch.py  simulation.launch.py  test.py
acrobat/rviz/: acrobat.rviz
acrobat/src/: acrobat_executor.cpp
acrobat_common/: CMakeLists.txt  package.xml
acrobat_common/include/acrobat_common/composition/: visibility_control.hpp
acrobat_common/include/acrobat_common/constants/: reference_frames.hpp  refrence_frames.hpp  topics.hpp
acrobat_common/include/acrobat_common/lie_groups/: lie_group_conversions.hpp  lie_groups.hpp
acrobat_common/include/acrobat_common/math/: math_defines.hpp
acrobat_common/include/acrobat_common/time/: rate.hpp  time.hpp
acrobat_common/src/lie_groups/: lie_group_conversions.cpp  lie_groups.cpp
acrobat_common/test/: CMakeLists.txt  test_lie_group_conversions.cpp
acrobat_imu/: CMakeLists.txt  package.xml
acrobat_imu/src/: acrobat_imu.cpp
acrobat_localization/: CMakeLists.txt  package.xml
acrobat_localization/include/acrobat_localization/: backend.hpp  frame.hpp  frontend.hpp  imu_propagator.hpp  keyframe.hpp  map_point.hpp  visual_odometry.hpp  visualizer.hpp
acrobat_localization/include/acrobat_localization/anms/: anms.h
acrobat_localization/src/: backend.cpp  frame.cpp  frontend.cpp  imu_propagator.cpp  main.cpp  map_point.cpp  visual_odometry.cpp  visualizer.cpp
acrobat_msgs/: CMakeLists.txt  package.xml
acrobat_msgs/msg/: AcrobatControl.msg  BetaflightMotor.msg
arducam/: CMakeLists.txt  package.xml
arducam/config/: arducam_driver_config.yml  camera_register_config.cfg
arducam/include/arducam/: arducam_driver.hpp  image_viewer.hpp  ini.h
arducam/include/arducam_config_parser/: arducam_config_parser.h  ini.h
arducam/include/arducam_sdk/: ArduCamLib.h
arducam/launch/: arducam.launch.py  arducam_test.launch.py  image_viewer.launch.py
arducam/src/: arducam_config_parser.c  arducam_driver.cpp  dlopen_composition.cpp  image_viewer.cpp  ini.c  manual_arducam.cpp
arducam/src/arducam_config_parser/: arducam_config_parser.c  ini.c
arducam_sdk/: CMakeLists.txt  package.xml
dockerfiles/base/: Dockerfile
dockerfiles/dependencies/: Dockerfile
dockerfiles/runtime/: Dockerfile
dockerfiles/testing/: Dockerfile
msp_bridge/: CMakeLists.txt  package.xml
msp_bridge/config/: msp_bridge.yml
msp_bridge/include/msp_bridge/: msp_bridge.hpp
msp_bridge/launch/: msp_bridge.launch.py
msp_bridge/src/: msp_bridge.cpp
project_settings/: CMakeLists.txt  package.xml  project_settings-extras.cmake
project_settings/cmake/: CompilerWarnings.cmake  InstallLintConfigs.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
project_settings/config/: .clang-format  .clang-tidy
serial_bridge/: CMakeLists.txt  package.xml
serial_bridge/cmake/: Findlibserial.cmake
serial_bridge/include/serial_bridge/: buffer.hpp  encodings.hpp  picosha2.h
serial_bridge/launch/: serial_bridge.launch.py
serial_bridge/src/: buffer.cpp  encodings.cpp  serial_bridge.cpp
serial_bridge/test/: test_buffer_functions.cpp  test_checksum.cpp  test_finalize_message.cpp  testing_utils.cpp  testing_utils.hpp
system_config/: 80-acrobat.rules  rx.service
txrx/: copy.sh  docker_monitor.py  rx.py  serial_port.py  tx.py
