<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acrobat</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mdeegan@umich.edu">martin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>project_settings</build_depend>
  <build_depend>arducam</build_depend>
  <build_depend>msp_bridge</build_depend>

  <exec_depend>ros1_bridge</exec_depend>
  <exec_depend>arducam</exec_depend>
  <exec_depend>msp_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
