<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msp_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mdeegan@umich.edu">martin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>acrobat_msgs</build_depend>
  <build_depend>project_settings</build_depend>
  <build_depend>acrobat_common</build_depend>
  <build_depend>msp</build_depend>

  <exec_depend>acrobat_msgs</exec_depend>
  <exec_depend>acrobat_common</exec_depend>
  <exec_depend>msp</exec_depend>

  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
